complete content of footer area

--- a/index.html
+++ b/index.html
@@ -148,7 +148,11 @@
 							<span class="badge">Node.js</span>
 						</small>
 					</li>
-					<li>PHP</li>
+					<li>PHP
+						<small>
+							<span class="badge">CodeIgniter</span>
+						</small>
+					</li>
 					<li>Ruby
 						<small>
 							<span class="badge">Rails</span>
@@ -175,13 +179,15 @@
 			<div class="container">
 				<ul>
 					<li>
-						<i><span class="label label-default">2011-2012</span> National Changhua University of Education, <small>Chanhua City, Taiwan</small></i>
+						<span class="label label-default">2011-2012</span>
+						<i> National Changhua University of Education, <small>Chanhua City, Taiwan</small></i>
 						<p>
 							Graduate Intitute of Information Management.
 						</p>
 					</li>
 					<li>
-						<i><span class="label label-default">2007-2011</span> National Changhua University of Education, <small>Chanhua City, Taiwan</small></i>
+						<span class="label label-default">2007-2011</span>
+						<i> National Changhua University of Education, <small>Chanhua City, Taiwan</small></i>
 						<p>
 							<strong>Bachelor of Business Administration</strong>, Department of Information Management.
 						</p>
@@ -195,17 +201,36 @@
 			<div class="container text-center">
 				<ul>
 					<li>Public Profiles</li>
-					<li>Twitter</li>
-					<li>Github</li>
-					<li>LinkedIn</li>
+					<li><a href="https://github.com/vc7" target="_blank">Github</a></li>
+					<li><a href="https://twitter.com/vince78718">Twitter</a></li>
+					<li><a href="http://www.linkedin.com/in/vince7">LinkedIn</a></li>
 				</ul>
 			</div>
 		</div>
 
 		<footer>
 			<div class="container text-center">
-				Copyright © 2013, <a href="mailto:hi@vincenttt.com">hi@vincenttt.com</a><br>
-				<span class="label label-default">v 2.0</span>
+				<p>Copyright © 2013-2014, Vincent Chen</p>
+				<p>
+					<i class="fa fa-envelope-o mute"></i> <a href="mailto:hi@vincenttt.com">hi@vincenttt.com</a>
+				</p>
+				<p>
+					<span class="label label-default">v 2.0</span>
+				</p>
+				<p>
+					Built with <i class="fa fa-heart love"></i> of 
+					<a href="http://getbootstrap.com/" target="_blank">Bootstrap 3.1</a>, 
+					<a href="http://jquery.com/" target="_blank">jQuery</a>,
+					<a href="http://angularjs.org/" target="_blank">AngularJS</a>,
+					<a href="http://www.google.com/fonts" target="_blank">Google Fonts</a>,
+					<a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>
+				</p>
+				<p><small>All brand icons are trademarks of their respective owners.</small></p>
+				<p>
+					<a href="http://www.w3.org/html/logo/">
+						<img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-device.png" width="82" height="32" alt="HTML5 Powered with CSS3 / Styling, and Device Access" title="HTML5 Powered with CSS3 / Styling, and Device Access">
+					</a>
+				</p>
 			</div>
 		</footer>
 
