refactory and add resume in

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
 					<p>
 						I'm playing with Objective-C, PHP, F2E and more.
 					</p>
+					<p>
+						<a href="documents/resume.pdf" class="btn btn-lg btn-outline-inverse"><i class="fa fa-arrow-down"></i> Download Resume</a>
+					</p>	
 				</div>
 				<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 text-center">
 					<img src="images/avatar.jpg" class="img-responsive img-thumbnail" alt="Vincent Chen">
@@ -197,43 +200,8 @@
 			
 		</div>
 
-		<div class="ribbon">
-			<div class="container text-center">
-				<ul>
-					<li>Public Profiles</li>
-					<li><a href="https://github.com/vc7" target="_blank">Github</a></li>
-					<li><a href="https://twitter.com/vince78718">Twitter</a></li>
-					<li><a href="http://www.linkedin.com/in/vince7">LinkedIn</a></li>
-					<li><a href="http://blog.kumaya.co">Blog</a></li>
-				</ul>
-			</div>
-		</div>
-
-		<footer>
-			<div class="container text-center">
-				<p>Copyright © 2013-2014, Vincent Chen</p>
-				<p>
-					<i class="fa fa-envelope-o mute"></i> <a href="mailto:hi@vincenttt.com">hi@vincenttt.com</a>
-				</p>
-				<p>
-					<span class="label label-default">v 2.0</span>
-				</p>
-				<p>
-					Built with <i class="fa fa-heart love"></i> of 
-					<a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>, 
-					<a href="http://jquery.com/" target="_blank">jQuery</a>,
-					<a href="http://angularjs.org/" target="_blank">AngularJS</a>,
-					<a href="http://www.google.com/fonts" target="_blank">Google Fonts</a>,
-					<a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>
-				</p>
-				<p><small>All brand icons are trademarks of their respective owners.</small></p>
-				<p>
-					<a href="http://www.w3.org/html/logo/">
-						<img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-device.png" width="82" height="32" alt="HTML5 Powered with CSS3 / Styling, and Device Access" title="HTML5 Powered with CSS3 / Styling, and Device Access">
-					</a>
-				</p>
-			</div>
-		</footer>
+		<!-- Footer Area ================================================== -->
+		<ng-include src="'views/layouts/footer.html'"></ng-include>
 
 		<!-- jQuery -->
 		<script src="http://code.jquery.com/jquery.js"></script>
