update js and data structure

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<!-- Main ================================================== -->
 		
 		<div class="container main">
-			<h2>About Me</h2>
+			<h2 id="about">About Me</h2>
 			<div class="container about">
 				<div class="row">
 					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 text-center">
