--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Title Page</title>
+		<title>Resume | Li-Hsuan Chen</title>
 		<meta charset="UTF-8">
 
 		<meta name="author" content="Vincent Chen">
