remove angular here, implement later. add ga.

--- a/index.html
+++ b/index.html
@@ -30,10 +30,33 @@
 		<link href="stylesheets/app.css" rel="stylesheet">
 
 	</head>
-	<body>
+	<body ng-controller="MainController">
 		
 		<!-- Navbar ================================================== -->
-		<ng-include src="'views/layouts/navigation.html'"></ng-include>
+		<header class="navbar navbar-inverse navbar-default navbar-fixed-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+							<span class="sr-only">Toggle navigation</span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+							<span class="icon-bar"></span>
+						</button>
+					<a class="navbar-brand" href="#">Li-Hsuan Chen</a>
+				</div>
+				<nav class="navbar-collapse collapse">
+					<ul class="nav navbar-nav">
+						<li><a href="#about">About</a></li>
+					</ul>
+					<ul class="nav navbar-nav navbar-right">
+						<li><a href="https://github.com/vc7" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+						<li><a href="https://twitter.com/vince78718" target="_blank"><i class="fa fa-twitter"></i></a></li>
+						<li><a href="http://www.linkedin.com/in/vince7" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
+						<li><a href="http://blog.kumaya.co" target="_blank"><i class="fa fa-bold"></i></a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
 
 		<!-- jumbotron ================================================== -->
 		<div class="jumbotron">
@@ -183,14 +206,14 @@
 				<ul>
 					<li>
 						<span class="label label-primary">2011-2012</span>
-						<i> National Changhua University of Education, <small>Chanhua City, Taiwan</small></i>
+						<i> National Changhua University of Education, <small>Changhua City, Taiwan</small></i>
 						<p>
 							Graduate Intitute of Information Management.
 						</p>
 					</li>
 					<li>
 						<span class="label label-primary">2007-2011</span>
-						<i> National Changhua University of Education, <small>Chanhua City, Taiwan</small></i>
+						<i> National Changhua University of Education, <small>Changhua City, Taiwan</small></i>
 						<p>
 							<strong>Bachelor of Business Administration</strong>, Department of Information Management.
 						</p>
@@ -200,27 +223,51 @@
 			
 		</div>
 
-		<!-- Footer Area ================================================== -->
-		<ng-include src="'views/layouts/footer.html'"></ng-include>
+		<!-- Ribbon ================================================== -->
+		<div class="ribbon">
+			<div class="container text-center">
+				<ul>
+					<li>Public Profiles</li>
+					<li><a href="https://github.com/vc7" target="_blank">Github</a></li>
+					<li><a href="https://twitter.com/vince78718" target="_blank">Twitter</a></li>
+					<li><a href="http://www.linkedin.com/in/vince7" target="_blank">LinkedIn</a></li>
+					<li><a href="http://blog.kumaya.co" target="_blank">Blog</a></li>
+				</ul>
+			</div>
+		</div>
+
+		<!-- Footer ================================================== -->
+		<footer>
+			<div class="container text-center">
+				<p>Copyright © 2013-2014, Vincent Chen</p>
+				<p>
+					<i class="fa fa-envelope-o mute"></i> <a href="mailto:hi@vincenttt.com">hi@vincenttt.com</a>
+				</p>
+				<p>
+					<span class="label label-default">v 2.0</span>
+				</p>
+				<p>
+					Built with <i class="fa fa-heart love"></i> of 
+					<a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>, 
+					<a href="http://jquery.com/" target="_blank">jQuery</a>,
+					<a href="http://www.google.com/fonts" target="_blank">Google Fonts</a>,
+					<a href="http://fortawesome.github.io/Font-Awesome/" target="_blank">Font Awesome</a>
+				</p>
+				<p><small>All brand icons are trademarks of their respective owners.</small></p>
+				<p>
+					<a href="http://www.w3.org/html/logo/">
+						<img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-device.png" width="82" height="32" alt="HTML5 Powered with CSS3 / Styling, and Device Access" title="HTML5 Powered with CSS3 / Styling, and Device Access">
+					</a>
+				</p>
+			</div>
+		</footer>
 
 		<!-- jQuery -->
 		<script src="http://code.jquery.com/jquery.js"></script>
 		<!-- Bootstrap JavaScript -->
 		<script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-		<!-- Angular -->
-		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+		<!-- GA -->
+		<script src="scripts/ga.js"></script>
 
-		<script src="scripts/app.js"></script>
-
-		<script src="scripts/services/AppServices.js"></script>
-
-		<script src="scripts/libs/vincent.js"></script>
-
-		<script type="text/javascript">
-			// manual bootstrap
-			angular.element(document).ready(function() {
-				angular.bootstrap(document, ['app']);
-			});
-		</script>
 	</body>
 </html>
