--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 		<meta charset="UTF-8">
 
 		<meta name="author" content="Vincent Chen">
-		<meta name="description" content="">
-		<meta name="keywords" content="">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="This is the resume site of Vincent Chen.">
+		<meta name="keywords" content="Vincent Chen, 陳澧萱, 履歷, iOS, resume">
+		<meta name="robots" content="index, follow">
+		<link rel="canonical" href="http://resume.vincenttt.com/">
+		<link href="images/favicon.png" rel="icon">
 
 		<!-- Apple Meta -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="default">
-
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -23,11 +25,38 @@
 		<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 		<!-- Open Graph Tags -->
+		<meta property="og:title" content="Resume | Li-Hsuan Chen">
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="http://resume.vincenttt.com/">
 
 		<!-- Facebook Tags -->
+		<meta property="fb:admins" content="1825815115">
+
+		<!-- Twitter Tags -->
+		<meta name="twitter:title" content="Resume | Li-Hsuan Chen">
+		<meta name="twitter:description" content="This is the resume site of Vincent Chen.">
+		<meta name="twitter:creator" content="@vince78718">
 
 		<!-- App CSS -->
 		<link href="stylesheets/app.css" rel="stylesheet">
+
+		<!-- iOS Webapp -->
+		<!-- iPhone - iOS 6 -->
+		<link rel="apple-touch-icon" sizes="57x57" href="images/ios/apple-touch-icon-57x57.png">
+		<!-- iPhone - iOS 7 -->
+		<link rel="apple-touch-icon" sizes="60x60" href="images/ios/apple-touch-icon-60x60.png">
+		<!-- iPhone (Retina) - iOS 6 -->
+		<link rel="apple-touch-icon" sizes="114x114" href="images/ios/apple-touch-icon-114x114.png">
+		<!-- iPhone (Retina) - iOS 7 -->
+		<link rel="apple-touch-icon" sizes="120x120" href="images/ios/apple-touch-icon-120x120.png">
+		<!-- iPad - iOS 6 -->
+		<link rel="apple-touch-icon" sizes="72x72" href="images/ios/apple-touch-icon-72x72.png">
+		<!-- iPad - iOS 7 -->
+		<link rel="apple-touch-icon" sizes="76x76" href="images/ios/apple-touch-icon-76x76.png">
+		<!-- iPad (Retina) - iOS 6 -->
+		<link rel="apple-touch-icon" sizes="144x144" href="images/ios/apple-touch-icon-144x144.png">
+		<!-- iPad (Retina) - iOS 7 -->
+		<link rel="apple-touch-icon" sizes="152x152" href="images/ios/apple-touch-icon-152x152.png">
 
 	</head>
 	<body ng-controller="MainController">
@@ -46,6 +75,9 @@
 				</div>
 				<nav class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
+						<li><a href="#about">About</a></li>
+						<li><a href="#about">About</a></li>
+						<li><a href="#about">About</a></li>
 						<li><a href="#about">About</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
@@ -89,8 +121,8 @@
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 							<span class="about-hp">HP</span>
 							<div class="progress">
-								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-									<span class="sr-only">80% Complete</span>
+								<div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100" style="width: 97%">
+									<span class="sr-only">97% Complete</span>
 								</div>
 							</div>
 						</div>
@@ -99,8 +131,8 @@
 						<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 							<span class="about-mp">MP</span>
 							<div class="progress">
-								<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-									<span class="sr-only">80% Complete</span>
+								<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="99" aria-valuemin="0" aria-valuemax="100" style="width: 99%">
+									<span class="sr-only">99% Complete</span>
 								</div>
 							</div>
 						</div>
