update nav links

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
+		<meta name="apple-mobile-web-app-title" content="Resume">
 
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -76,9 +77,9 @@
 				<nav class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
 						<li><a href="#about">About</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#about">About</a></li>
+						<li><a href="#skills">Skills</a></li>
+						<li><a href="#career">Career</a></li>
+						<li><a href="#education">Education</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="https://github.com/vc7" target="_blank"><i class="fa fa-github-alt"></i></a></li>
@@ -169,7 +170,7 @@
 				</div>
 			</div>
 
-			<h2>Skills</h2>
+			<h2 id="skills">Skills</h2>
 			<div class="container">
 				
 				<ul>
@@ -225,7 +226,7 @@
 				</div>
 			</div>
 			
-			<h2>Career</h2>
+			<h2 id="career">Career</h2>
 			<div class="container">
 				<ul>
 					<li><span class="label label-primary">2013-2014</span> <strong>Mobile Software Engineer</strong> <i>Efwuhn, Inc., Taiwan</i></li>
@@ -233,7 +234,7 @@
 				</ul>
 			</div>	
 
-			<h2>Education</h2>
+			<h2 id="education">Education</h2>
 			<div class="container">
 				<ul>
 					<li>
