--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 
 		<meta name="author" content="Vincent Chen">
-		<meta name="description" content="This is the resume site of Vincent Chen.">
+		<meta name="description" content="This is the resume site of Li-Hsuan Chen (陳澧萱, Vincent Chen). A software engineer who came from Taiwan (台灣).">
 		<meta name="keywords" content="Vincent Chen, 陳澧萱, 履歷, iOS, resume">
 		<link rel="canonical" href="http://resume.vincenttt.com/">
 		<link href="images/favicon.png" rel="icon">
