add works of apps

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 						<li><a href="#about">About</a></li>
 						<li><a href="#skills">Skills</a></li>
 						<li><a href="#career">Career</a></li>
+						<li><a href="#works">Works</a></li>
 						<li><a href="#education">Education</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
@@ -232,6 +233,34 @@
 					<li><span class="label label-primary">2013</span> <strong>Chief Development Officer of iOS</strong> <i>Ans Global Corporation, Taiwan</i></li>
 				</ul>
 			</div>	
+
+			<h2 id="works">Works</h2>
+			<div class="container">
+				<h3>Apps</h3>	
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 text-center">
+					<iframe allowfullscreen src="http://www.youtube.com/embed/kE1VyPfPyjg" frameborder="0" width="227" height="370"></iframe>
+					<hr/>
+					<h3>Dot</h3>
+					<h4 class="text-warning">First Prize</h4>
+					<p><small>育成 x APP 開發競賽 - 應用開發組 (iOS) <br/><span class="text-muted">(December, 2012)</span></small></p>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 text-center">
+					<img src="images/plus.PNG" alt="plus app" class="img-thumbnail" width="213">
+					<hr>
+					<h3>Plus</h3>
+					<p><small>Custom UI practice. Rank 3 on new board of Productivity <br/><span class="text-muted">(June, 2013)</span></small></p>
+				</div>
+				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 text-center">
+					<img src="images/population.png" alt="" class="img-thumbnail" width="213">
+					<hr>
+					<h3>World Population</h3>
+					<p><small>Custom UI practice. <br><a href="https://github.com/vc7/chartdemo"><i class="fa fa-github-alt"></i> Github Repo</a><br/><span class="text-muted">(July, 2013)</span></small></p>
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+					<hr/>
+					<i class="fa fa-linkedin-square"></i> Please check my <a href="http://www.linkedin.com/in/vince7" target="_blank">LinkedIn Profile</a> For more information.
+				</div>
+			</div>
 
 			<h2 id="education">Education</h2>
 			<div class="container">
