update ga event

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						I'm playing with Objective-C, PHP, F2E and more.
 					</p>
 					<p>
-						<a href="documents/resume.pdf" class="btn btn-lg btn-outline-inverse"><i class="fa fa-arrow-down"></i> Download Resume</a>
+						<a href="documents/resume.pdf" id="resume_download" class="btn btn-lg btn-outline-inverse"><i class="fa fa-arrow-down"></i> Download Resume</a>
 					</p>	
 				</div>
 				<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 text-center">
