--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 		<!-- Bootstrap CSS -->
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
-		<link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+		<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
 		<!-- Open Graph Tags -->
 		<meta property="og:title" content="Resume | Li-Hsuan Chen">
@@ -34,7 +34,7 @@
 
 		<!-- Twitter Tags -->
 		<meta name="twitter:title" content="Resume | Li-Hsuan Chen">
-		<meta name="twitter:description" content="This is the resume site of Vincent Chen.">
+		<meta name="twitter:description" content="This is the resume site of Li-Hsuan Chen.">
 		<meta name="twitter:creator" content="@vince78718">
 
 		<!-- App CSS -->
@@ -78,11 +78,11 @@
 						<li><a href="#about">About</a></li>
 						<li><a href="#skills">Skills</a></li>
 						<li><a href="#career">Career</a></li>
-						<li><a href="#works">Works</a></li>
+						<li><a href="#projects">Projects</a></li>
 						<li><a href="#education">Education</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right">
-						<li><a href="https://github.com/vc7" target="_blank"><i class="fa fa-github-alt"></i></a></li>
+						<li><a href="https://github.com/vc7" target="_blank" title="GitHub"><i class="fa fa-github-alt"></i></a></li>
 						<li><a href="https://twitter.com/vince78718" target="_blank"><i class="fa fa-twitter"></i></a></li>
 						<li><a href="http://www.linkedin.com/in/vince7" target="_blank"><i class="fa fa-linkedin-square"></i></a></li>
 						<li><a href="http://blog.kumaya.co" target="_blank"><i class="fa fa-bold"></i></a></li>
@@ -93,19 +93,15 @@
 
 		<!-- jumbotron ================================================== -->
 		<div class="jumbotron">
-			<div class="container">
-				<div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
-					<h1>Hi, I'm Li-Hsuan Chen</h1>
-					<p>
-						I'm playing with Objective-C, PHP, F2E and more.
-					</p>
-					<p>
-						<a href="documents/resume.pdf" id="resume_download" class="btn btn-lg btn-outline-inverse"><i class="fa fa-arrow-down"></i> Download Resume</a>
-					</p>	
-				</div>
-				<div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 text-center">
-					<img src="images/avatar.jpg" class="img-responsive img-thumbnail" alt="Vincent Chen">
-				</div>
+			<div class="container text-center">
+				<img src="images/avatar.jpg" class="img-circle img-thumbnail" alt="Vincent Chen" width="120">
+				<h1>Hi, I'm Li-Hsuan Chen</h1>
+				<p>
+					I'm playing with Objective-C, PHP, F2E and more.
+				</p>
+				<p>
+					<a href="documents/resume.pdf" id="resume_download" class="btn btn-lg btn-outline-inverse" target="_blank"><i class="fa fa-arrow-down"></i> Download Resume</a>
+				</p>
 			</div>
 		</div>
 
@@ -172,15 +168,7 @@
 
 			<h2 id="skills">Skills</h2>
 			<div class="container">
-				
-				<ul>
-					<li>iOS development</li>
-					<li>Frontend and backend web development</li>
-					<li>User interface design</li>
-					<li>User experience design</li>
-				</ul>	
-				
-				<h3>Languages and Frameworks <small>order by familiarity.</small></h3>
+				<h3> <small>Ordered by familiarity.</small></h3>
 				<ul>
 					<li>Objective-C
 						<small>
@@ -199,8 +187,7 @@
 					<li>JavaScript 
 						<small>
 							<span class="badge">AngularJS</span> 
-							<span class="badge">jQuery</span> 
-							<span class="badge">Node.js</span>
+							<span class="badge">jQuery</span>
 						</small>
 					</li>
 					<li>PHP
@@ -213,52 +200,95 @@
 							<span class="badge">Rails</span>
 						</small>
 					</li>
-					<li>C#
-						<small>
-							<span class="badge">ASP.NET</span>
-						</small>
-					</li>
-					<li>Java</li>
 				</ul>
-				<h3>Tools <small>which enhancing my works.</small></h3>
+				<h3>Project Related <small>which enhancing my works.</small></h3>
 				<div class="container">
-					<p>Git, Vim, Adobe Photoshop, Adobe Illustrator, Linux, OS X.</p>
+					<p>Github flow, scrum, agile development</p>
+				</div>
+				<h3>Sidekicks <small>others in my blood.</small></h3>
+				<div class="container">
+					<p>Illustrator, Photoshop, UI/UX design</p>
 				</div>
 			</div>
 			
 			<h2 id="career">Career</h2>
 			<div class="container">
 				<ul>
-					<li><span class="label label-primary">2013-2014</span> <strong>Mobile Software Engineer</strong> <i>Efwuhn, Inc., Taiwan</i></li>
+					<li><span class="label label-primary">2014 -</span> <strong>iOS Engineer</strong> <i>Spring House Entertainment Technology Inc., Taiwan</i></li>
+					<li><span class="label label-primary">2013 - 2014</span> <strong>Mobile Software Engineer</strong> <i>Efwuhn, Inc., Taiwan</i></li>
 					<li><span class="label label-primary">2013</span> <strong>Chief Development Officer of iOS</strong> <i>Ans Global Corporation, Taiwan</i></li>
 				</ul>
 			</div>	
 
-			<h2 id="works">Works</h2>
+			<h2 id="projects">Projects</h2>
 			<div class="container">
-				<h3>Apps</h3>	
-				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 text-center">
-					<iframe allowfullscreen src="http://www.youtube.com/embed/kE1VyPfPyjg" frameborder="0" width="227" height="370"></iframe>
-					<hr/>
-					<h3>Dot</h3>
-					<h4 class="text-warning">First Prize</h4>
-					<p><small>育成 x APP 開發競賽 - 應用開發組 (iOS) <br/><span class="text-muted">(December, 2012)</span></small></p>
+				<div class="row">
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+						<a href="https://itunes.apple.com/us/app/phpconf-taiwan-2014/id918190667?mt=8" class="btn btn-default btn-sm" target="_blank">
+							<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
+						</a><br>
+						<h3>PHPConf Taiwan 2014 iOS app</h3>
+						<p>
+							<small>The official app for PHPConf Taiwan 2014.</small><br>
+							<small class="text-muted">October, 2014</small>	
+						</p>
+					</div>
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+						<a href="https://itunes.apple.com/us/app/tallyup-for-costco/id932235451?mt=8" class="btn btn-default btn-sm" target="_blank">
+							<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
+						</a><br>
+						<h3>Tallyup for Costco</h3>
+						<p>
+							<small>An 3rd party shopping assistant app for Costco.</small><br>
+							<small class="text-muted">2013 ~ 2014</small>	
+						</p>
+					</div>
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+						<a href="https://itunes.apple.com/us/app/phpconf-taiwan-2014/id918190667?mt=8" class="btn btn-default btn-sm" target="_blank">
+							<i class="fa fa-github-alt"></i> &nbsp;<small>GitHub</small> <strong>Opensource</strong>
+						</a><br>
+						<h3>KPSDK for iOS</h3>
+						<p>
+							<small>An open source iOS SDK for the Taipei City mayoral candidate 柯文哲's open data API.</small><br>
+							<small class="text-muted">December, 2014</small>	
+						</p>
+					</div>
+				</div><hr>
+				<div class="row">
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+						<a href="https://itunes.apple.com/us/app/plus-simple-counter/id666613910?mt=8" class="btn btn-default btn-sm" target="_blank">
+							<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
+						</a><br>
+						<h3>Plus</h3>
+						<p>
+							<small>A Simple counter.</small><br>
+							<small class="text-muted">June, 2013</small>
+						</p>
+					</div>
+					<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+						<a href="https://itunes.apple.com/us/app/ipass-scanner/id607572666?mt=8" class="btn btn-default btn-sm" target="_blank">
+							<i class="fa fa-apple"></i> &nbsp;<small>App Store</small> <strong>Download</strong>
+						</a><br>
+						<h3>iPASS Scanner</h3>
+						<p>
+							<small>A scanner and members management app for the Passbook service iPASSbank.</small><br>
+							<small class="text-muted">June, 2013</small>
+						</p>
+					</div>
+				</div><hr>
+				<div class="row">
+					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+						<iframe allowfullscreen src="http://www.youtube.com/embed/kE1VyPfPyjg" frameborder="0"></iframe>
+						<h3>Dot</h3>
+						<h4 class="text-warning">First Prize</h4>
+						<p><small>育成 x APP 開發競賽 - 應用開發組 (iOS) <br/><span class="text-muted">(December, 2012)</span></small></p>
+					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 text-center">
-					<img src="images/plus.PNG" alt="plus app" class="img-thumbnail" width="213">
-					<hr>
-					<h3>Plus</h3>
-					<p><small>Custom UI practice. Rank 3 on new board of Productivity <br/><span class="text-muted">(June, 2013)</span></small></p>
-				</div>
-				<div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 text-center">
-					<img src="images/population.png" alt="" class="img-thumbnail" width="213">
-					<hr>
-					<h3>World Population</h3>
-					<p><small>Custom UI practice. <br><a href="https://github.com/vc7/chartdemo"><i class="fa fa-github-alt"></i> Github Repo</a><br/><span class="text-muted">(July, 2013)</span></small></p>
-				</div>
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<hr/>
-					<i class="fa fa-linkedin-square"></i> Please check my <a href="http://www.linkedin.com/in/vince7" target="_blank">LinkedIn Profile</a> For more information.
+				<div class="row">
+					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+						<hr/>
+						<i class="fa fa-linkedin-square"></i> Please check out my <a href="http://www.linkedin.com/in/vince7" target="_blank">LinkedIn Profile</a> for more information.
+					</div>
 				</div>
 			</div>
 
@@ -266,15 +296,15 @@
 			<div class="container">
 				<ul>
 					<li>
-						<span class="label label-primary">2011-2012</span>
-						<i> National Changhua University of Education, <small>Changhua City, Taiwan</small></i>
+						<span class="label label-primary">2011 - 2012</span>
+						<i> National Changhua University of Education, <small>Changhua County, Taiwan</small></i>
 						<p>
 							Graduate Intitute of Information Management.
 						</p>
 					</li>
 					<li>
-						<span class="label label-primary">2007-2011</span>
-						<i> National Changhua University of Education, <small>Changhua City, Taiwan</small></i>
+						<span class="label label-primary">2007 - 2011</span>
+						<i> National Changhua University of Education, <small>Changhua County, Taiwan</small></i>
 						<p>
 							<strong>Bachelor of Business Administration</strong>, Department of Information Management.
 						</p>
@@ -300,12 +330,12 @@
 		<!-- Footer ================================================== -->
 		<footer>
 			<div class="container text-center">
-				<p>Copyright © 2013-2014, Vincent Chen</p>
+				<p>Copyright © 2013-2015, Li Hsuan Chen</p>
 				<p>
-					<i class="fa fa-envelope-o mute"></i> <a href="mailto:hi@vincenttt.com">hi@vincenttt.com</a>
+					<i class="fa fa-envelope-o mute"></i> &nbsp;vincent(a)vincenttt.com</a>
 				</p>
 				<p>
-					<span class="label label-default">v 2.0</span>
+					<span class="label label-default">v 3.0</span>
 				</p>
 				<p>
 					Built with <i class="fa fa-heart love"></i> of 
